# MechanicAssistant

./: CMakeLists.txt  README.txt  admincars.cpp  admincars.h  admincars.ui  carinfo.cpp  carinfo.h  carinfo.ui  cars.cpp  cars.h  cars.ui  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcar.cpp  newcar.h  newcar.ui  newto.cpp  newto.ui  registration.cpp  registration.h  registration.ui
